...
                android:layout_width="match_parent"
                android:layout_height="55dip"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/closeDialogImg"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/baseline_close_black_36dp"
                    android:tint="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:text="@string/filters"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/doneDialogImg"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/baseline_done_black_36dp"
                    android:tint="@android:color/white" />
...

                <RadioGroup
                    style="@style/FilterSectionItemStyle"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/withPhoto"
                        style="@style/FilterSectionTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/with_photo" />

                    <RadioButton
                        android:id="@+id/withoutPhoto"
                        style="@style/FilterSectionTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/withPhoto"
                        android:text="@string/without_photo" />

                    <RadioButton
                        android:id="@+id/allPhoto"
                        style="@style/FilterSectionTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/withoutPhoto"
                        android:text="@string/all" />
                </RadioGroup>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/inFavourite"
                        android:text="@string/not_in_favourite" />

                    <RadioButton
                        android:id="@+id/allFavourite"
                        style="@style/FilterSectionTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/withoutPhoto"
                        android:text="@string/all" />
                </RadioGroup>
...

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textAgeMinValue"
                        style="@style/FilterSectionTextViewStyle"
                        android:layout_width="45dip"
                        android:layout_height="45dip"
                        android:layout_alignParentLeft="true"
                        android:gravity="center" />

...

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textHeightMinValue"
                        style="@style/FilterSectionTextViewStyle"
                        android:layout_width="45dip"
                        android:layout_height="45dip"
                        android:layout_alignParentLeft="true"
                        android:gravity="center" />

...
